2010-02-02  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Call ares_library_init and ares_library_cleanup if they are
	available. Some code cleanups.
	* src/Platform.cc

2010-02-02  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Call ares_process_fd() each time after epoll to handle timeout.
	* src/EpollEventPoll.cc
	* src/EpollEventPoll.h

2010-01-31  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Suppressed type-cast compiler warning
	* src/CookieStorage.cc

2010-01-31  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed compile error on Mac OS X.
	* src/CookieStorage.h

2010-01-31  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed cookietest.txt from Makefile.am
	* test/Makefile.am

2010-01-31  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated version number in man page.
	* doc/aria2c.1.txt

2010-01-31  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Rewritten help message for --allow-overwrite option.
	* doc/aria2c.1.txt
	* src/usage_text.h

2010-01-31  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added bittorrent key to the response of tellStatus XML-RPC method.
	The associated value of the key is a struct and contains data
	retrieved from .torrent file, such as name, announce-list,
	comment, etc.
	* doc/aria2c.1.txt
	* src/XmlRpcMethodImpl.cc
	* src/XmlRpcMethodImpl.h
	* test/XmlRpcMethodTest.cc

2010-01-29  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed parse(std::istream&) and parse(const std::string&) from
	CookieParser.
	* src/CookieParser.cc
	* src/CookieParser.h
	* test/CookieParserTest.cc
	* test/cookietest.txt: Removed

2010-01-29  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that cookie for domain a.b.c is not sent to the host
	a.b.c if no other cookies are stored.  Fixed the bug that
	Cookie::markOriginServerOnly() is not called when cookies are
	loaded from file/sqlite3 database.
	* src/Cookie.h